fix wrong background img, title height, last item has no border bot

--- a/css/services.css
+++ b/css/services.css
@@ -1,12 +1,12 @@
 .pageTitle {
-  background-image: url(../img/g4.jpg);
+  background-image: url(../img/banner4.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   position: relative;
   z-index: 0;
   margin-top: 90px;
-  padding: 72px 0;
+  padding: 65px 0;
 }
 .pageTitle::before {
   content: "";
@@ -62,6 +62,9 @@
 }
 .services .services__item:first-child {
   padding-top: 0;
+}
+.services .services__item:last-child {
+  border-bottom: none;
 }
 .services__item p {
   font-size: 1.2rem;
